# SRCommon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: LinuxCI.yml  MainCI.yml  WindowsCI.yml
cmake/: Codegen.cmake  ResourceEmbedder.cmake
cxx/: CSSParser.cxx  Common.cxx  ECS.cxx  ICU.cxx  Network.cxx  Platform.cxx  Types.cxx  Utils.cxx  Web.cxx  World.cxx
inc/Utils/: Debug.h  DebugDraw.h  Settings.h  Xml.h  macros.h  stdInclude.h
inc/Utils/CommandManager/: CmdManager.h  ReversibleCommand.h
inc/Utils/Common/: BaseMarshal.h  Breakpoint.h  CastUtils.h  CmdOptions.h  Compression.h  Coroutine.h  EnumReflector.h  Enumerations.h  Features.h  GraphUtils.h  HashManager.h  Hashes.h  NonCopyable.h  PassKey.h  Singleton.h  StringAtomLiterals.h  StringFormat.h  StringUtils.h  SubscriptionHolder.h  ThreadUtils.h  TypeInfo.h  VectorUtils.h
inc/Utils/ECS/: Component.h  Entity.h  EntityManager.h  EntityRef.h  EntityRefUtils.h  GameObject.h  IComponentable.h  ISavable.h  LayerManager.h  Prefab.h  SceneObject.h  Transform.h  Transform2D.h  Transform3D.h  TransformZero.h
inc/Utils/Events/: EventManager.h
inc/Utils/FileSystem/: AssimpCache.h  FileDialog.h  FileSystem.h  Path.h
inc/Utils/Game/: LookAtComponent.h
inc/Utils/Input/: InputSystem.h  KeyCodes.h
inc/Utils/Locale/: Convert.h  Icu.h
inc/Utils/Localization/: Convert.h  Encoding.h  Icu.h  LocalizationManager.h  UTF.h
inc/Utils/Math/: Mathematics.h  Matrix3x3.h  Matrix4x4.h  Matrix4x4Utils.h  Quaternion.h  Rect.h  Vector2.h  Vector3.h  Vector4.h  Vector6.h
inc/Utils/Network/: Acceptor.h  AsioTCPSocket.h  Client.h  Context.h  PeerToPeer.h  Pinger.h  Server.h  Socket.h  Utils.h
inc/Utils/Network/Asio/: AsioContext.h  AsioICMPSocket.h  AsioPinger.h  AsioTCPAcceptor.h  AsioTCPSocket.h
inc/Utils/Network/Headers/: ICMPHeader.h  IPV4Header.h
inc/Utils/Platform/: Platform.h  XKeySymToKeyCode.h
inc/Utils/Profile/: TracyContext.h
inc/Utils/ResourceManager/: IResource.h  ResourceManager.h
inc/Utils/Resources/: IResource.h  ResourceContainer.h  ResourceEmbedder.h  ResourceEmbedder.py  ResourceInfo.h  ResourceManager.h  ResourcesHolder.h  Xml.h  Yaml.h
inc/Utils/SRLM/: DataType.h  LogicalMachine.h  LogicalNode.h  Utils.h
inc/Utils/Serialization/: DefaultCheckers.inl.h  DefaultObjectMakers.inl.h  Deserializer.h  ISerializable.h  ObjectDataAccessors.inl.h  SRASerialization.h  Serializable.h  Serialization.h  Serializer.h
inc/Utils/TaskManager/: ThreadWorker.h
inc/Utils/Tests/: AtlasBuilderTest.h  SharedPtrAutotests.h
inc/Utils/TypeTraits/: ClassDB.h  Factory.h  Properties.h  Property.h  SRClass.h  SRClassMeta.h  SRProperty.h  StandardProperty.h  TypeTraits.h
inc/Utils/Types/: BinarySearchTree.h  DataStorage.h  ForwardList.h  Function.h  IRawMeshHolder.h  LinkedList.h  List.h  MerkleTree.h  Node.h  NodeDictionary.h  ObjectPool.h  PoolSet.h  RawMesh.h  SafePointer.h  SharedPtr.h  SortedVector.h  Stack.h  StringAtom.h  Thread.h  Time.h  Timer.h  UintWide_t.h  Vector.h
inc/Utils/Web/CSS/: CSS.h  CSSColor.h  CSSEnums.h  CSSOptional.h  CSSParser.h  CSSSizeValue.h
inc/Utils/Web/HTML/: HTML.h  HTMLParser.h  Tag.h
inc/Utils/World/: CameraData.h  Chunk.h  Observer.h  Region.h  Scene.h  SceneAllocator.h  SceneCubeChunkLogic.h  SceneDefaultLogic.h  SceneLogic.h  SceneUpdater.h  TensorKey.h  WorldGen.h
inc/Utils/World/ChunkSystem/: Chunk.h  ChunkInfo.h  ChunkTicket.h  Region.h  SceneChunkLogic.h
libs/openssl/crypto/sha/: sha256.c
libs/openssl/include/crypto/: md32_common.h
libs/openssl/include/openssl/: bio.h  cmp.h  configuration.h  opensslv.h  ssl.h  x509_vfy.h
py/: Codegen.py  Common.py  ResourceEmbedder.py
src/Utils/: Debug.cpp  Settings.cpp
src/Utils/CommandManager/: CmdManager.cpp
src/Utils/Common/: CmdOptions.cpp  Coroutine.cpp  EnumReflector.cpp  Features.cpp  HashManager.cpp  Singleton.cpp  StringUtils.cpp  SubscriptionHolder.cpp  Vertices.cpp
src/Utils/ECS/: Component.cpp  ComponentManager.cpp  Entity.cpp  EntityRef.cpp  EntityRefUtils.cpp  GameObject.cpp  IComponentable.cpp  LayerManager.cpp  Migration.cpp  Prefab.cpp  SceneObject.cpp  Transform.cpp  Transform2D.cpp  Transform3D.cpp  TransformZero.cpp
src/Utils/FileSystem/: AssimpCache.cpp  FileDialog.cpp  FileSystem.cpp  Path.cpp
src/Utils/Game/: LookAtComponent.cpp
src/Utils/Input/: InputHandler.cpp  InputSystem.cpp
src/Utils/Localization/: LocalizationManager.cpp
src/Utils/Math/: Matrix4x4.cpp  Vector4.cpp
src/Utils/Network/: Acceptor.cpp  AsioTCPSocket.cpp  Client.cpp  Context.cpp  PeerToPeer.cpp  Server.cpp  Socket.cpp
src/Utils/Network/Asio/: AsioContext.cpp  AsioICMPSocket.cpp  AsioPinger.cpp  AsioTCPAcceptor.cpp  AsioTCPSocket.cpp
src/Utils/Platform/: LinuxStacktraceImpl.cpp  PlatformAndroid.cpp  PlatformLinux.cpp  PlatformSharedVars.cpp  PlatformWindows.cpp  StacktraceLinux.cpp  StacktraceWindows.cpp
src/Utils/ResourceManager/: IResource.cpp  ResourceInfo.cpp  ResourceManager.cpp
src/Utils/Resources/: FileWatcher.cpp  IResource.cpp  IResourceReloader.cpp  ResourceContainer.cpp  ResourceEmbedder.cpp  ResourceInfo.cpp  ResourceManager.cpp  ResourcesHolder.cpp  Xml.cpp  Yaml.cpp
src/Utils/SRLM/: ConvertorNode.cpp  DataTypeManager.cpp  LogicalMachine.cpp  LogicalNodeManager.cpp  LogicalNodes.cpp
src/Utils/Serialization/: Deserializer.cpp  ISerializable.cpp  SRASerialization.cpp  Serializable.cpp  Serializer.cpp
src/Utils/TaskManager/: TaskManager.cpp  ThreadWorker.cpp
src/Utils/TypeTraits/: ClassDB.cpp  Factory.cpp  Properties.cpp  Property.cpp  SRClass.cpp  SRClassMeta.cpp  SRProperty.cpp  StandardProperty.cpp
src/Utils/Types/: ForwardList.cpp  IRawMeshHolder.cpp  LinkedList.cpp  Marshal.cpp  Node.cpp  NodeDictionary.cpp  ObjectPool.cpp  PoolSet.cpp  RawMesh.cpp  SharedPtr.cpp  SortedVector.cpp  Stack.cpp  Stream.cpp  StringAtom.cpp  Thread.cpp  Timer.cpp  Vector.cpp
src/Utils/World/: Chunk.cpp  Chunko.cpp  Observer.cpp  Region.cpp  Regiono.cpp  Scene.cpp  SceneAllocator.cpp  SceneCubeChunkLogic.cpp  SceneDefaultLogic.cpp  SceneLogic.cpp  ScenePrefabLogic.cpp  SceneUpdater.cpp
(+9 files in other folders)
